2003-05-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_generic_glyph_mask_render): Render
	using NRSVP and mask OR
	(nr_rasterfont_ensure_glyph_slot): Build NRSVP

2003-05-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/Makefile.am: Removed art-utils.h

	* src/libnr/nr-svp.c (nr_svl_build_finish_segment): New helper
	(nr_svl_build_moveto): Ditto
	(nr_svl_build_lineto): Ditto
	(nr_svl_build_curveto): New helper
	(nr_svl_from_art_vpath): Use NRSVLBuild
	(nr_svl_from_art_bpath): New method

2003-05-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* sodipodi.desktop.in: Updated by Michael Terry

2003-05-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/svg/svg-length.c (sp_svg_number_write_d): Fixed rounding overflow

2003-05-01  Christian Schaller <Uraeus@gnome.org>
	* Fixed up desktop.in file to conform to latest freedesktop standard
	* Fixed up spec.in file to actually work
	* Added missing extensions-skeleton.h to makefile
	* Added spec file to EXTRA_DIST

2003-05-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-item.c (nr_arena_item_children): Return correct
	value (thanks to MentaLguY)

2003-04-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp.h: Use more compact format for segments

	* src/libnr/nr-svp.c (nr_svp_from_svl): Use max segment length

2003-04-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_svp_render): New method
	(nr_pixblock_render_svp_mask_or): New method
	(nr_pixblock_render_svl_mask_or): Renamed old one
	(nr_svl_render): Ditto

	* src/libnr/nr-svp.c (nr_svp_point_wind): Implement
	(nr_line_point_distance2): Helper
	(nr_svp_point_distance): Ditto
	(nr_svp_from_svl): New method, implemented packed format and
	renamed old one to S(orted)V(ertex)L(ist)
	(nr_svp_free): Ditto

	* src/display/nr-arena-shape.h: Port all basics to NRSVP

2003-04-27  Lauris Kaplinski  <lauris@kaplinski.com>
