@@ -1,3 +1,7 @@
+2003-05-06  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/libnr/nr-svp-render.c (nr_svp_render): Fix some running sum problems
+
 2003-05-04  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_generic_glyph_mask_render): Render
